generator client {
  provider = "prisma-client-js"
  binaryTargets = ["native", "windows"]
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model activity_log {
  id           BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  log_name     String?   @db.VarChar(255)
  description  String    @db.Text
  subject_type String?   @db.VarChar(255)
  event        String?   @db.VarChar(255)
  subject_id   BigInt?   @db.UnsignedBigInt
  causer_type  String?   @db.VarChar(255)
  causer_id    BigInt?   @db.UnsignedBigInt
  properties   Json?
  batch_uuid   String?   @db.Char(36)
  created_at   DateTime? @db.Timestamp(0)
  updated_at   DateTime? @db.Timestamp(0)

  @@index([log_name], map: "activity_log_log_name_index")
  @@index([causer_type, causer_id], map: "causer")
  @@index([subject_type, subject_id], map: "subject")
}

model attachments {
  attachment_id BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  task_id       Int?
  file_name     String?   @db.VarChar(255)
  file_path     String?   @db.VarChar(255)
  created_at    DateTime? @db.Timestamp(0)
  updated_at    DateTime? @db.Timestamp(0)
}

model customer_feedback {
  feedback_id BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  task_id     Int
  rating      Int
  message     String?   @db.VarChar(255)
  customer_id Int
  user_id     Int
  created_at  DateTime? @db.Timestamp(0)
  updated_at  DateTime? @db.Timestamp(0)
}

model customers {
  customer_id   BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  customer_code String?   @db.VarChar(255)
  customer_name String?   @db.VarChar(255)
  company       String?   @db.VarChar(255)
  email         String?   @db.VarChar(255)
  mobile_phone  String?   @db.VarChar(255)
  address       String?   @db.VarChar(255)
  status        String    @default("active") @db.VarChar(255)
  created_at    DateTime? @db.Timestamp(0)
  updated_at    DateTime? @db.Timestamp(0)
  projects      projects[]
}

model departments {
  department_id BigInt             @id @default(autoincrement()) @db.UnsignedBigInt
  department    String?            @db.VarChar(255)
  description   String?            @db.Text
  status        departments_status @default(active)
  created_at    DateTime?          @db.Timestamp(0)
  updated_at    DateTime?          @db.Timestamp(0)
  employees employees[]
  tasks tasks[]
}

model designations {
  designation_id BigInt              @id @default(autoincrement()) @db.UnsignedBigInt
  designation    String?             @db.VarChar(255)
  description    String?             @db.Text
  status         designations_status @default(active)
  created_at     DateTime?           @db.Timestamp(0)
  updated_at     DateTime?           @db.Timestamp(0)
  employees employees[]
}

model employees {
  employee_id    BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  first_name     String?   @db.VarChar(255)
  last_name      String?   @db.VarChar(255)
  email          String?   @db.VarChar(255)
  office_phone   String?   @db.VarChar(255)
  private_phone  String?   @db.VarChar(255)
  department_id  BigInt?
  designation_id BigInt?
  status         String    @default("inactive") @db.VarChar(255)
  created_at     DateTime? @db.Timestamp(0)
  updated_at     DateTime? @db.Timestamp(0)
  assignments taskassignments[]
  department departments? @relation(fields: [department_id], references: [department_id])
  designation designations? @relation(fields: [designation_id], references: [designation_id])
}

model failed_jobs {
  id         BigInt   @id @default(autoincrement()) @db.UnsignedBigInt
  uuid       String   @unique(map: "failed_jobs_uuid_unique") @db.VarChar(255)
  connection String   @db.Text
  queue      String   @db.Text
  payload    String   @db.LongText
  exception  String   @db.LongText
  failed_at  DateTime @default(now()) @db.Timestamp(0)
}

model migrations {
  id        Int    @id @default(autoincrement()) @db.UnsignedInt
  migration String @db.VarChar(255)
  batch     Int
}

model modules {
  id          BigInt         @id @default(autoincrement()) @db.UnsignedBigInt
  project_id  BigInt         @db.UnsignedBigInt
  module_name String         @db.VarChar(255)
  description String?        @db.Text
  status      modules_status @default(active)
  created_at  DateTime?      @db.Timestamp(0)
  updated_at  DateTime?      @db.Timestamp(0)

  @@index([project_id], map: "modules_project_id_foreign")
  project projects @relation(fields: [project_id], references: [project_id])
  objects objects[]
  tasks tasks[]
}

model notifications {
  id              String    @id @db.Char(36)
  type            String    @db.VarChar(255)
  notifiable_type String    @db.VarChar(255)
  notifiable_id   BigInt    @db.UnsignedBigInt
  data            String    @db.Text
  read_at         DateTime? @db.Timestamp(0)
  created_at      DateTime? @db.Timestamp(0)
  updated_at      DateTime? @db.Timestamp(0)

  @@index([notifiable_type, notifiable_id], map: "notifications_notifiable_type_notifiable_id_index")
}

model objects {
  id          BigInt         @id @default(autoincrement()) @db.UnsignedBigInt
  module_id   BigInt         @db.UnsignedBigInt
  object_name String         @db.VarChar(255)
  description String?        @db.Text
  status      objects_status @default(active)
  created_at  DateTime?      @db.Timestamp(0)
  updated_at  DateTime?      @db.Timestamp(0)

  @@index([module_id], map: "objects_module_id_foreign")
  module modules @relation(fields: [module_id], references: [id])
  sub_objects sub_objects[]
  tasks tasks[]
}

/// The underlying table does not contain a valid unique identifier and can therefore currently not be handled by Prisma Client.
model password_resets {
  email      String    @db.VarChar(255)
  token      String    @db.VarChar(255)
  created_at DateTime? @db.Timestamp(0)

  @@index([email], map: "password_resets_email_index")
  @@ignore
}

model permissions {
  id         BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  name       String    @db.VarChar(255)
  slug       String    @unique(map: "permissions_slug_unique") @db.VarChar(255)
  created_at DateTime? @db.Timestamp(0)
  updated_at DateTime? @db.Timestamp(0)
}

model personal_access_tokens {
  id             BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  tokenable_type String    @db.VarChar(255)
  tokenable_id   BigInt    @db.UnsignedBigInt
  name           String    @db.VarChar(255)
  token          String    @unique(map: "personal_access_tokens_token_unique") @db.VarChar(64)
  abilities      String?   @db.Text
  last_used_at   DateTime? @db.Timestamp(0)
  expires_at     DateTime? @db.Timestamp(0)
  created_at     DateTime? @db.Timestamp(0)
  updated_at     DateTime? @db.Timestamp(0)

  @@index([tokenable_type, tokenable_id], map: "personal_access_tokens_tokenable_type_tokenable_id_index")
}

model projects {
  project_id   BigInt          @id @default(autoincrement()) @db.UnsignedBigInt
  project_name String?         @db.VarChar(255)
  customer_id  BigInt?         @db.UnsignedBigInt
  start_date   DateTime?       @db.Date
  end_date     DateTime?       @db.Date
  status       projects_status @default(planned)
  created_at   DateTime?       @db.Timestamp(0)
  updated_at   DateTime?       @db.Timestamp(0)

  @@index([customer_id], map: "projects_customer_id_foreign")
  modules modules[]
  customer customers? @relation(fields: [customer_id], references: [customer_id])
  tasks tasks[]
}

model roles {
  id          BigInt       @id @default(autoincrement()) @db.UnsignedBigInt
  name        String       @db.VarChar(255)
  description String?      @db.Text
  slug        String?      @db.VarChar(255)
  status      roles_status @default(active)
  created_at  DateTime?    @db.Timestamp(0)
  updated_at  DateTime?    @db.Timestamp(0)
}

model roles_permissions {
  role_id       BigInt @db.UnsignedBigInt
  permission_id BigInt @db.UnsignedBigInt

  @@id([role_id, permission_id])
  @@index([permission_id], map: "roles_permissions_permission_id_foreign")
}

model sub_objects {
  id              BigInt             @id @default(autoincrement()) @db.UnsignedBigInt
  object_id       BigInt             @db.UnsignedBigInt
  sub_object_name String             @db.VarChar(255)
  description     String?            @db.Text
  status          sub_objects_status @default(active)
  created_at      DateTime?          @db.Timestamp(0)
  updated_at      DateTime?          @db.Timestamp(0)

  @@index([object_id], map: "sub_objects_object_id_foreign")
  object objects @relation(fields: [object_id], references: [id])
  tasks tasks[]
}

model task_activity {
  activity_id   BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  activity_name String    @db.VarChar(255)
  description   String?   @db.Text
  display_order Int       @default(0)
  is_active     Boolean   @default(true)
  created_at    DateTime? @db.Timestamp(0)
  updated_at    DateTime? @db.Timestamp(0)
}

model task_comment_threads {
  id         BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  task_id    Int
  user_id    Int
  user_name  String    @db.VarChar(100)
  user_type  String    @db.VarChar(100)
  text       String    @db.VarChar(200)
  created_at DateTime? @db.Timestamp(0)
  updated_at DateTime? @db.Timestamp(0)
}

model task_status {
  id                BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  task_id           BigInt    @db.UnsignedBigInt
  activity_id       BigInt    @db.UnsignedBigInt
  assigned_to       BigInt?   @db.UnsignedBigInt
  assigned_by       BigInt?   @db.UnsignedBigInt
  accepted_by       BigInt?   @db.UnsignedBigInt
  accepted_at       DateTime? @db.Timestamp(0)
  qa_by             BigInt?   @db.UnsignedBigInt
  status_changed_at DateTime? @db.Timestamp(0)
  notes             String?   @db.Text
  is_current        Boolean   @default(false)

  @@index([accepted_by], map: "task_status_accepted_by_foreign")
  @@index([activity_id], map: "task_status_activity_id_foreign")
  @@index([assigned_by], map: "task_status_assigned_by_foreign")
  @@index([assigned_to], map: "task_status_assigned_to_foreign")
  @@index([qa_by], map: "task_status_qa_by_foreign")
  @@index([task_id, is_current], map: "task_status_task_id_is_current_index")
}

model taskassignments {
  assignment_id        BigInt                            @id @default(autoincrement()) @db.UnsignedBigInt
  task_id              BigInt?
  create_employee_id   Int?
  assigned_employee_id BigInt?
  qa_by                Int?
  accepted_datetime    DateTime?                         @db.Date
  inprogress_datetime  DateTime?                         @db.Date
  inqa_datetime        DateTime?                         @db.Date
  inrepeating_datetime DateTime?                         @db.Date
  started_datetime     DateTime?                         @db.Date
  completed_datetime   DateTime                          @db.Date
  status               Int?
  requires_acceptance  Boolean                           @default(true)
  acceptance_status    taskassignments_acceptance_status @default(pending)
  accepted_by          BigInt?                           @db.UnsignedBigInt
  acceptance_datetime  DateTime?                         @db.Timestamp(0)
  active_task          Boolean                           @default(false)
  created_at           DateTime?                         @db.Timestamp(0)
  updated_at           DateTime?                         @db.Timestamp(0)

  @@index([accepted_by], map: "taskassignments_accepted_by_foreign")
  task tasks? @relation(fields: [task_id], references: [task_id])
  assigned_employee employees? @relation(fields: [assigned_employee_id], references: [employee_id])
}

model tasks {
  task_id              BigInt          @id @default(autoincrement()) @db.UnsignedBigInt
  project_id           BigInt?         @db.UnsignedBigInt
  module_id            BigInt?         @db.UnsignedBigInt
  object_id            BigInt?         @db.UnsignedBigInt
  sub_object_id        BigInt?         @db.UnsignedBigInt
  task_name            String?         @db.VarChar(255)
  task_type            tasks_task_type @default(assign_to_others)
  department_id        BigInt?         @db.UnsignedBigInt
  description          String?         @db.Text
  old_task_type        String?         @db.VarChar(255)
  log_user_id          Int?
  task_priority        Int
  assigned_to          BigInt?         @db.UnsignedBigInt
  assigned_by          BigInt?         @db.UnsignedBigInt
  accepted_by          BigInt?         @db.UnsignedBigInt
  is_accepted          Boolean         @default(false)
  accepted_at          DateTime?       @db.Timestamp(0)
  created_by           BigInt?         @db.UnsignedBigInt
  updated_by           BigInt?         @db.UnsignedBigInt
  time_tracking_active Boolean         @default(false)
  total_time_seconds   Int             @default(0)
  last_switch_on       DateTime?       @db.Timestamp(0)
  due_date             DateTime?       @db.Date
  due_time             DateTime?       @db.Time(0)
  task_started_time    DateTime?       @db.Timestamp(0)
  created_at           DateTime?       @db.Timestamp(0)
  updated_at           DateTime?       @db.Timestamp(0)

  @@index([accepted_by], map: "tasks_accepted_by_foreign")
  @@index([assigned_by], map: "tasks_assigned_by_foreign")
  @@index([assigned_to], map: "tasks_assigned_to_foreign")
  @@index([created_by], map: "tasks_created_by_foreign")
  @@index([department_id], map: "tasks_department_id_foreign")
  @@index([module_id], map: "tasks_module_id_foreign")
  @@index([object_id], map: "tasks_object_id_foreign")
  @@index([project_id], map: "tasks_project_id_foreign")
  @@index([sub_object_id], map: "tasks_sub_object_id_foreign")
  @@index([updated_by], map: "tasks_updated_by_foreign")
  
  project projects? @relation(fields: [project_id], references: [project_id])
  module modules? @relation(fields: [module_id], references: [id])
  object objects? @relation(fields: [object_id], references: [id])
  sub_object sub_objects? @relation(fields: [sub_object_id], references: [id])
  department departments? @relation(fields: [department_id], references: [department_id])
  assigned_user users? @relation("AssignedTo", fields: [assigned_to], references: [id])
  created_user users? @relation("CreatedBy", fields: [created_by], references: [id])
  assignments taskassignments[]
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model time_entries {
  id          BigInt              @id @default(autoincrement()) @db.UnsignedBigInt
  user_id     BigInt              @db.UnsignedBigInt
  task_id     BigInt?             @db.UnsignedBigInt
  project_id  BigInt?             @db.UnsignedBigInt
  description String?             @db.Text
  start_time  DateTime            @db.DateTime(0)
  end_time    DateTime?           @db.DateTime(0)
  duration    Int?
  is_billable Boolean             @default(true)
  hourly_rate Decimal?            @db.Decimal(10, 2)
  status      time_entries_status @default(stopped)
  created_at  DateTime?           @db.Timestamp(0)
  updated_at  DateTime?           @db.Timestamp(0)

  @@index([project_id], map: "time_entries_project_id_foreign")
  @@index([task_id], map: "time_entries_task_id_foreign")
  @@index([user_id], map: "time_entries_user_id_foreign")
}

model users {
  id                BigInt    @id @default(autoincrement()) @db.UnsignedBigInt
  role_id           BigInt?   @db.UnsignedBigInt
  employee_id       Int?
  customer_id       Int?
  name              String    @db.VarChar(255)
  email             String    @unique(map: "users_email_unique") @db.VarChar(255)
  email_verified_at DateTime? @db.Timestamp(0)
  password          String    @db.VarChar(255)
  avatar            String?   @db.VarChar(255)
  remember_token    String?   @db.VarChar(100)
  status            String    @default("active") @db.VarChar(255)
  created_at        DateTime? @db.Timestamp(0)
  updated_at        DateTime? @db.Timestamp(0)

  @@index([role_id], map: "users_role_id_foreign")
  assigned_tasks tasks[] @relation("AssignedTo")
  created_tasks tasks[] @relation("CreatedBy")
}

model users_permissions {
  user_id       BigInt @db.UnsignedBigInt
  permission_id BigInt @db.UnsignedBigInt

  @@id([user_id, permission_id])
  @@index([permission_id], map: "users_permissions_permission_id_foreign")
}

model users_roles {
  user_id BigInt @db.UnsignedBigInt
  role_id BigInt @db.UnsignedBigInt

  @@id([user_id, role_id])
  @@index([role_id], map: "users_roles_role_id_foreign")
}

enum departments_status {
  active
  inactive
}

enum designations_status {
  active
  inactive
}

enum modules_status {
  draft
  active
  completed
  archived
}

enum objects_status {
  draft
  active
  completed
  archived
}

enum roles_status {
  active
  inactive
}

enum sub_objects_status {
  draft
  active
  completed
  archived
}

enum projects_status {
  planned
  active
  on_hold
  completed
  cancelled
}

enum tasks_task_type {
  self_assign
  assign_to_others
  public
}

enum time_entries_status {
  running
  stopped
  approved
  rejected
}

enum taskassignments_acceptance_status {
  pending
  accepted
  rejected
}
