Project ProgressPulseV2 {
  database_type: 'MySQL'
  Note: 'Database schema for Progress Pulse V2 - Updated Schema'
}

Table users {
  id bigint [pk, increment]
  employee_id int [ref: - employees.employee_id]
  customer_id int [ref: - customers.customer_id]
  name string
  email string [unique]
  email_verified_at timestamp
  password string
  avatar text
  remember_token string
  created_at timestamp
  updated_at timestamp
}

Table employees {
  employee_id bigint [pk, increment]
  first_name string
  last_name string
  email string
  office_phone string
  private_phone string
  department_id int [ref: > departments.department_id]
  designation_id int [ref: > designations.designation_id]
  created_at timestamp
  updated_at timestamp
}

Table departments {
  department_id bigint [pk, increment]
  department string
  created_at timestamp
  updated_at timestamp
}

Table designations {
  designation_id bigint [pk, increment]
  designation string
  status enum [note: 'active, inactive']
  created_at timestamp
  updated_at timestamp
}

Table customers {
  customer_id bigint [pk, increment]
  customer_code string
  customer_name string
  email string
  mobile_phone string
  address string
  created_at timestamp
  updated_at timestamp
}

Table projects {
  project_id bigint [pk, increment]
  project_name string
  customer_id bigint [ref: > customers.customer_id]
  start_date date
  end_date date
  status enum [note: 'planned, active, on_hold, completed, cancelled']
  created_at timestamp
  updated_at timestamp
}

Table modules {
  id bigint [pk, increment]
  project_id bigint [ref: > projects.project_id]
  module_name string
  description text
  status enum [note: 'draft, active, completed, archived']
  created_at timestamp
  updated_at timestamp
}

Table objects {
  id bigint [pk, increment]
  module_id bigint [ref: > modules.id]
  object_name string
  description text
  status enum [note: 'draft, active, completed, archived']
  created_at timestamp
  updated_at timestamp
}

Table sub_objects {
  id bigint [pk, increment]
  object_id bigint [ref: > objects.id]
  sub_object_name string
  description text
  status enum [note: 'draft, active, completed, archived']
  created_at timestamp
  updated_at timestamp
}

Table tasks {
  task_id bigint [pk, increment]
  project_id bigint [ref: > projects.project_id]
  task_name string
  task_type enum [note: 'self_assign, assign_to_others, public']
  description text
  log_user_id int
  task_priority int
  module_id bigint [ref: > modules.id]
  object_id bigint [ref: > objects.id]
  sub_object_id bigint [ref: > sub_objects.id]
  department_id bigint [ref: > departments.department_id]
  due_date date
  due_time time
  task_started_time timestamp
  assigned_to bigint [ref: > users.id]
  assigned_by bigint [ref: > users.id]
  accepted_by bigint [ref: > users.id]
  accepted_at timestamp
  created_by bigint [ref: > users.id]
  updated_by bigint [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

Table task_activity {
  activity_id bigint [pk, increment]
  activity_name string
  description text
  display_order int
  is_active boolean
  created_at timestamp
  updated_at timestamp
}

Table task_status {
  id bigint [pk, increment]
  task_id bigint [ref: > tasks.task_id]
  activity_id bigint [ref: > task_activity.activity_id]
  assigned_to bigint [ref: > users.id]
  assigned_by bigint [ref: > users.id]
  accepted_by bigint [ref: > users.id]
  accepted_at timestamp
  qa_by bigint [ref: > users.id]
  status_changed_at timestamp
  notes text
  is_current boolean
}

Table attachments {
  attachment_id bigint [pk, increment]
  task_id int [ref: > tasks.task_id]
  file_name string
  file_path string
  created_at timestamp
  updated_at timestamp
}

Table time_entries {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  task_id bigint [ref: > tasks.task_id]
  project_id bigint [ref: > projects.project_id]
  description text
  start_time dateTime
  end_time dateTime
  duration int
  is_billable boolean
  hourly_rate decimal(10,2)
  status enum [note: 'running, stopped, approved, rejected']
  created_at timestamp
  updated_at timestamp
}

Table customer_feedback {
  feedback_id bigint [pk, increment]
  task_id int [ref: > tasks.task_id]
  customer_id int [ref: > customers.customer_id]
  user_id int [ref: > users.id]
  rating int
  message text
  created_at timestamp
  updated_at timestamp
}

Table task_comment_threads {
  id bigint [pk, increment]
  task_id int [ref: > tasks.task_id]
  user_id int [ref: > users.id]
  user_name string
  user_type string
  text string
  created_at timestamp
  updated_at timestamp
}

Table roles {
  id bigint [pk, increment]
  name string
  slug string
  status enum [note: 'active, inactive']
  created_at timestamp
  updated_at timestamp
}

Table permissions {
  id bigint [pk, increment]
  name string
  slug string [unique]
  created_at timestamp
  updated_at timestamp
}

Table roles_permissions {
  role_id bigint [pk, ref: > roles.id]
  permission_id bigint [pk, ref: > permissions.id]
}

Table users_roles {
  user_id bigint [pk, ref: > users.id]
  role_id bigint [pk, ref: > roles.id]
}

Table users_permissions {
  user_id bigint [pk, ref: > users.id]
  permission_id bigint [pk, ref: > permissions.id]
}

Table notifications {
  id uuid [pk]
  type string
  notifiable_type string
  notifiable_id bigint
  data text
  read_at timestamp
  created_at timestamp
  updated_at timestamp
}
